# alarm-clock

./: README.md
code/: 019__Clock-V1.cpp  CMakeLists.txt  pico_sdk_import.cmake
electronics/: Temporary Solution v2.b#2  Temporary Solution v2.b#3  Temporary Solution v2.b#4  Temporary Solution v2.b#5  Temporary Solution v2.b#6  Temporary Solution v2.b#7  Temporary Solution v2.b#8  Temporary Solution v2.b#9  Temporary Solution v2.brd  Temporary Solution v2.s#1  Temporary Solution v2.s#2  Temporary Solution v2.s#3  Temporary Solution v2.s#4  Temporary Solution v2.s#5  Temporary Solution v2.s#6  Temporary Solution v2.s#7  Temporary Solution v2.s#8  Temporary Solution v2.sch  Temporary Solution.b#1  Temporary Solution.b#2  Temporary Solution.b#3  Temporary Solution.b#4  Temporary Solution.b#5  Temporary Solution.b#6  Temporary Solution.b#7  Temporary Solution.brd  Temporary Solution.s#1  Temporary Solution.s#2  Temporary Solution.s#3  Temporary Solution.s#4  Temporary Solution.s#5  Temporary Solution_00.job  Temporary Solution_00.pro  Temporary Solution_01.job  Temporary Solution_02.job  Temporary Solution_02.pro  Temporary Solution_03.job  Temporary Solution_03.pro  Temporary Solution_04.job  Temporary Solution_04.pro  (+5 more)
